Changes from jTDS 1.2.6
=======================

10/01/2012 - Holger Rehn
 o Fixed unit test for bug #343, failing if run against SQL Server 2005.

09/28/2012 - Holger Rehn
 o Improved JUnit tests, setting server language "US-English" prevents a number
   of tests from failing.
 o Improved performance of ResultSetTest.testOutOfMemory() by about 100%.
 o Corrected JUnit test for timestamp values prior to 06/15/1940 0:00:00.
 o Fixed bug #676, error in SQL parser concerning multi line comments.
 o Fixed bug #541, data type mismatch when using {ts}/{t}/{d} JDBC escapes and
   added regression tests.
 o Added test for bug #676.
 o Improved test for bug #634.

09/27/2012 - Holger Rehn
 o PreparedStatementTest.testPrepareFailWarning() doesn't fail anymore when run
   against newer SQL Server versions or Sybase ASE.

09/26/2012 - Holger Rehn
 o Added test for bug #634.

09/25/2012 - Holger Rehn
 o Added test for bug #669.
 o Fixed StatementTest to be less strict when checking query timeout.

09/22/2012 - Holger Rehn
 o Fixed a number of incorrect error messages.
 o An attempt to execute a standard SQL statement using a CallableStatement now
   throws an appropriate SQLException on preparation instead of spurious errors
   when setting parameter values (bug #637).
 o Test for bug #637.

09/21/2012 - Holger Rehn
 o Fixed possible NPEs in JtdsObjectFactory (bug #633).
 o Added missing getter/setter methods for connection property "autoCommit" in
   class JtdsDataSource.
 o Corrected data types for connection properties "autoCommit" and "useNTLMv2".
 o Added missing properties to JtdsObjectFactoryUnitTest.testNoProperties().
 o Added missing default for connection property "useNTLMv2".
 o Corrected and simplified JtdsObjectFactoryTest and JtdsDataSourceTest.
 o Fixed memory pollution caused by ThreadLocal Calendar instances (bug #661).
 o Improved fix for bug #561 and bug #619 by not re-using GregorianCalendar
   instances anymore.